--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,41 @@
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.egg-info/
+dist/
+build/
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+*.egg
+.venv/
+venv/
+ENV/
+env/
+.env
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.mypy_cache/
+.dmypy.json
+dmypy.json
 myproject/data.sqlite
 myproject/data.sqlite.backup
+instance/
+.webassets-cache
+*.db
+*.sqlite
+*.sqlite3
